--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
 </head>
 
 <body>
-
-    <p>hello</p>
+    <table>
+        <tr>
+          <td>rawData</td>
+          <td id="rawData"></td>
+        </tr>
+        <tr>
+          <td>API used</td>
+          <td id="moApi"></td>
+        </tr>
+        <tr>
+          <td>linear acceleration (excl. gravity)</td>
+          <td id="moAccel"></td>
+        </tr>
+        <tr>
+          <td>acceleration incl. gravity</td>
+          <td id="moAccelGrav"></td>
+        </tr>
+        <tr>
+          <td>rotation rate</td>
+          <td id="moRotation"></td>
+        </tr>
+        <tr>
+          <td>interval (ms)</td>
+          <td id="moInterval"></td>
+        </tr>
+      </table>
 </body>
 
 </html>
