--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
+    <button onclick='requestOrientationPermission();'>Request orientation permission</button>
     <table>
         <tr>
           <td>rawData</td>
