--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
           <td id="moInterval"></td>
         </tr>
       </table>
+
+      <div id='canvas-container' width='100%' height='100%'></div>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.6/pixi.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
+      <script src="renderCustom.js"></script>
+      <script src="matterTest.js"></script>
       <script src="test.js"></script>
       <button onclick='requestOrientationPermission();'>Request orientation permission</button>
 </body>
